# mas-deepr

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: phase-0-1-report.md  running-phase-1.md  running-phase-2.md
docs/plan/: plan-v2.md
scripts/: compile_dspy.py  run_baseline.py  run_milestone_eval.py
src/mas_deepr/: __init__.py
src/mas_deepr/agents/: __init__.py  parsing.py  topology.py
src/mas_deepr/config/: __init__.py  models.py  settings.py
src/mas_deepr/data/: __init__.py  browsecomp.py  frames.py  hf.py  manifest.py  research_rubrics.py  schema.py  train_pool.py
src/mas_deepr/evals/: __init__.py  graders.py  judge.py  runner.py  stats.py
src/mas_deepr/llm/: __init__.py  factory.py
src/mas_deepr/optimize/: __init__.py  compile.py  lm.py  metric.py  modules.py  render.py  signatures.py
src/mas_deepr/prompts/: __init__.py  registry.py
src/mas_deepr/prompts/templates/: browser.yaml  manager.yaml  synthesizer.yaml
src/mas_deepr/telemetry/: __init__.py  tracker.py
src/mas_deepr/tools/: __init__.py  cache.py  code_exec.py  fetch.py  search.py
tests/: test_browsecomp_decrypt.py  test_cache.py  test_code_exec.py  test_eval_runner.py  test_fetch.py  test_graders.py  test_judge_parsing.py  test_manifest.py  test_optimize_lm.py  test_optimize_metric.py  test_optimize_program.py  test_optimize_render.py  test_optimize_retriever.py  test_parsing.py  test_pipeline_smoke.py  test_prompts.py  test_search.py  test_stats.py  test_telemetry.py  test_train_pool.py
