[project]
name = "mas-deepr"
version = "0.1.0"
description = "Multi-agent SLM deep-research stack: MAF topology, DSPy prompt compilation, GRPO training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.11.0",
    "agent-framework-openai>=1.10.1",
    "dspy>=3.2.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.23.0",
    "openai>=2.45.0",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "trafilatura>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

# Verbatim-preserved external template text (OpenAI simple-evals grader prompt).
[tool.ruff.lint.per-file-ignores]
"src/mas_deepr/evals/judge.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
files = ["src", "scripts", "tests"]

[[tool.mypy.overrides]]
module = ["trafilatura.*", "tavily.*", "agent_framework.*"]
ignore_missing_imports = true
follow_untyped_imports = true

# dspy.Signature's dynamic pydantic-metaclass machinery isn't statically
# typeable; following its untyped source (as above) surfaces a spurious
# metaclass-conflict error on every Signature subclass, so treat it as Any.
[[tool.mypy.overrides]]
module = ["dspy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]
